...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_search_black_18dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="197dp"
        android:layout_height="39dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#FFC107"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/faveImageView"
        android:layout_width="120dp"
        android:layout_height="40dp"
...
