...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracksListView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_search_black_18dp" />

    <TextView
        android:id="@+id/searchTextView"
        android:layout_width="409dp"
        android:layout_height="55dp"
        android:background="#F30E0E"
        android:fontFamily="@font/falling_sky_font"
        android:paddingTop="10dp"
        android:text="@string/searched"
...
